@@ -8036,7 +8036,7 @@ AT_DATA([prog.cob], [
            05  FILLER PIC 9(3) COMP-3 VALUE 254.
          02  DATA-NO-TERMINALS REDEFINES DATA-NO-TERMINALS-TBL
                                        PIC 9(3) COMP-3 OCCURS 6.
-       01  WORK-AREA.
+       01  WORK-AREA IS EXTERNAL.
            05  SUB                             PICTURE 9(4) COMP SYNC.
                88  ODD-RECORD                  VALUE 1 3 5.
 
